FIPS-6320/FIPS-6438 :: Use java.util.function instead of com.google.common.base
Change-Id: I06ac1eca3defaff1cc480a531f4ba8d35cf1832c